<resources>
    <string name="app_name">Motivation</string>
    <string name="new_phrase">Nova frase</string>
    <string name="your_name">Qual seu nome?</string>
    <string name="user">Usuário</string>
    <string name="phrase">Frase</string>
    <string name="save">Salvar</string>
    <string name="lets_begin">Vamos começar?</string>
    <string name="all_phrases">Todas as frases</string>
    <string name="motivations_phrases">Frases de motivação</string>
    <string name="morning_phrases">Frases para manhã</string>
    <string name="validation_mandatory_name">Informe seu nome.</string>
    <string name="hello">Olá,</string>
</resources>