<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple"
    tools:context=".ui.UserActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_lets_go"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lets_begin"
        android:textSize="32sp"
        android:fontFamily="@font/cabin"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/edit_your_name"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:gravity="center" android:layout_width="0dp"/>

    <Button
        android:id="@+id/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:layout_marginBottom="32dp"
        android:textSize="18sp"
        android:backgroundTint="@color/light_purple"
        android:text="@string/save"/>



</androidx.constraintlayout.widget.ConstraintLayout>