<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.MainActivity">


    <View
        android:id="@+id/linear_menu"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_all"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:src="@drawable/ic_all_inclusive"
        app:layout_constraintBottom_toBottomOf="@id/linear_menu"
        app:layout_constraintEnd_toStartOf="@id/image_happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/linear_menu"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/image_happy"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:src="@drawable/ic_happy"
        app:layout_constraintBottom_toBottomOf="@id/linear_menu"
        app:layout_constraintEnd_toStartOf="@id/image_sunny"
        app:layout_constraintStart_toEndOf="@id/image_all"
        app:layout_constraintTop_toTopOf="@id/linear_menu" />

    <ImageView
        android:id="@+id/image_sunny"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:src="@drawable/ic_sunny"
        app:layout_constraintBottom_toBottomOf="@id/linear_menu"
        app:layout_constraintEnd_toEndOf="@id/linear_menu"
        app:layout_constraintStart_toEndOf="@id/image_happy"
        app:layout_constraintTop_toTopOf="@id/linear_menu" />


    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_menu" />

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_marginTop="12dp"
        android:background="@color/purple"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_phrase" />

    <Button
        android:id="@+id/button_new_phase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/cabin"
        android:text="@string/new_phrase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

